--- a/htm/popnews/popnews.css
+++ b/htm/popnews/popnews.css
@@ -6,4 +6,4 @@ background-image: url('https://www.rumo.com.br/lojas/00035065/images/popupnews.j
 #popupNews span{color:#423e3e; font-size: 1.25em; font-weight: bold;}
 .btnClose{width: auto; height:auto; display: block; padding:10px 3px 0 0; float: right; }
 #formPopup input[type="text"], input[type="email"]{background: #fff; border-radius: 5px; box-shadow: -1px 0 3px 0 #ccc inset; padding: 5px 5px; width: 210px; color:#000}
-.btnSubPop{border: 0px; width: 138px; height: 47px; cursor:pointer; color: white;}
+.btnSubPop{border: 0px; cursor:pointer; color: white; background: black;}
