--- a/htm/popnews/popnews.css
+++ b/htm/popnews/popnews.css
@@ -3,7 +3,7 @@
 #popupNews{position: absolute; z-index: 999999991; background:#fff; width: 400px; min-height: 267px; border-radius: 5px; box-shadow: 0 0 5px 0 black; text-align: center; padding:5px 10px; display: none; background-repeat: no-repeat;
 background-image: url('https://www.rumo.com.br/lojas/00035065/images/popupnews.jpg');}
 #popupNews h1{color:#0574c9; top:0px; left:2px;}
-.msg{color:#423e3e; font-size: 1em; font-weight: bold;}
+.msg{color:black; font-size: 1em; font-weight: bold;}
 .btnClose{width: auto; height:auto; display: block; padding:10px 3px 0 0; float: right; }
 #formPopup input[type="text"], input[type="email"]{background: #fff; border-radius: 5px; box-shadow: -1px 0 3px 0 #ccc inset; padding: 5px 5px; width: 60%; color:#000}
 .btnSubPop{padding: 8px; font-size: 15px; color: white; background: black; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;}
