--- a/htm/popnews/popnews.css
+++ b/htm/popnews/popnews.css
@@ -1,12 +1,13 @@
 /* PopNews*/
 #FullBackground{position: absolute; min-width: 90%; min-height: 90%; background: #000; z-index: 99999999; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden; opacity: 0.55; display: none;}
 #popupNews{position: absolute; z-index: 999999991; background:#fff; width: 400px; min-height: 300px; border-radius: 5px; box-shadow: 0 0 5px 0 black; text-align: center; padding:5px 10px; display: none; background-repeat: no-repeat;
-background-image: url('https://www.rumo.com.br/lojas/00035065/images/popupnews2.jpg');}
+background-image: url('https://www.rumo.com.br/lojas/00035065/images/background-newsletters.jpg');}
 #popupNews h1{color:#0574c9; top:0px; left:2px;}
 .msg{color:black; font-size: 1em; font-weight: bold;}
 .btnClose{padding: 8px; font-size: 15px; color: white; background: black; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;}
 #formPopup input[type="text"], input[type="email"]{background: #fff; border-radius: 5px; box-shadow: -1px 0 3px 0 #ccc inset; padding: 5px 5px; width: 60%; color:#000}
 .btnSubPop{padding: 8px; font-size: 15px; color: black; background: silver; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;}
+.envelope{}
 
 
 
