--- a/htm/css/style.css
+++ b/htm/css/style.css
@@ -117,9 +117,13 @@
     background-size: cover;
     -o-background-size: cover;
     background-position: center;
-    background-image: url('https://www.rumo.com.br/lojas/00033937/images/smartphone-table-transparent-min.jpg');
+    background-image: url('https://www.rumo.com.br/lojas/00035065/images/smartphone-table-transparent-min.jpg');
     text-align: center;
     padding: 20% 1%;
+  }
+
+  .newsletters {
+    background-image: url('https://www.rumo.com.br/lojas/00035065/images/section-newsletters-min.jpg');
   }
 
   .container-fluid {
