--- a/htm/css/style.css
+++ b/htm/css/style.css
@@ -126,6 +126,10 @@
     background-image: url('https://www.rumo.com.br/lojas/00035065/images/section-newsletters-min.jpg');
   }
 
+  .btnSubNews{
+      padding: 8px; font-size: 15px; color: black; background: silver; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;
+    }
+
   .container-fluid {
       padding: 20px 15px;
   }
