--- a/htm/css/style.css
+++ b/htm/css/style.css
@@ -122,14 +122,6 @@
     padding: 20% 1%;
   }
 
-  .newsletters {
-    background-image: url('https://www.rumo.com.br/lojas/00035065/images/section-newsletters-min.jpg');
-  }
-
-  .btnSubNews{
-      padding: 8px; font-size: 15px; color: black; background: silver; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;
-    }
-
   .container-fluid {
       padding: 20px 15px;
   }
@@ -497,4 +489,21 @@
 
 #mySidenav a:hover {
   background-color: #d9d9d9;
+}
+
+.newsletters {
+  position: relative;
+  width: 100%;
+  min-height: auto;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+  background-image: url('https://www.rumo.com.br/lojas/00035065/images/section-newsletters-min.jpg');
+  text-align: center;
+}
+
+.btnSubNews{
+  padding: 8px; font-size: 15px; color: black; background: silver; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;
 }
