--- a/htm/css/style.css
+++ b/htm/css/style.css
@@ -502,9 +502,13 @@
   background-position: center;
   background-image: url('https://www.rumo.com.br/lojas/00035065/images/section-newsletters-min.jpg');
   text-align: center;
-  padding: 60px;
+  padding: 5%;
 }
 
 .btnSubNews{
-  padding: 8px; font-size: 15px; color: black; background: yellow; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0;
+  font-family: Audiowide, Lato, sans-serif; padding: 8px; font-size: 15px; color: black; background: yellow; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0;
+}
+
+.msg-news {
+  font-family: Audiowide, Lato, sans-serif; color:white; font-size: 1.5em; font-weight: bold; letter-spacing: 0.02em;
 }
