--- a/htm/popnews/popnews.css
+++ b/htm/popnews/popnews.css
@@ -3,10 +3,10 @@
 #popupNews{position: absolute; z-index: 999999991; background:#fff; width: 470px; min-height: 255px; border-radius: 5px; box-shadow: 0 0 5px 0 black; text-align: center; padding:5px 10px; display: none; background-repeat: no-repeat;
 background-image: url('https://www.rumo.com.br/lojas/00035065/images/background-newsletters2-min.jpg');}
 #popupNews h1{color:#0574c9; top:0px; left:2px;}
-.msg{color:silver; font-size: 1.2em; font-weight: bold; letter-spacing: 0.02em;}
-.btnClose{padding: 8px; font-size: 15px; color: white; background: #ff4d4d; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;}
+.msg{font-family: Audiowide, Lato, sans-serif; color:silver; font-size: 1.2em; font-weight: bold; letter-spacing: 0.02em;}
+.btnClose{font-family: Audiowide, Lato, sans-serif; padding: 8px; font-size: 15px; color: white; background: #ff4d4d; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;}
 #formPopup input[type="text"], input[type="email"]{background: #fff; border-radius: 5px; box-shadow: -1px 0 3px 0 #ccc inset; padding: 5px 5px; width: 60%; color:#000}
-.btnSubPop{padding: 8px; font-size: 15px; color: white; background: #4d4dff; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;}
+.btnSubPop{font-family: Audiowide, Lato, sans-serif; padding: 8px; font-size: 15px; color: white; background: #4d4dff; border: 0; box-shadow: 0 0 5px 0 #ccc; text-transform: capitalize; outline-color: transparent; cursor: pointer; text-decoration: none; margin: 1.1111rem 0; width: 25%;}
 
 
 
