ajuste de layout geral

--- a/htm/css/style.css
+++ b/htm/css/style.css
@@ -510,5 +510,5 @@
 }
 
 .msg-news {
-  font-family: Audiowide, Lato, sans-serif; color:white; font-size: 1.5em; font-weight: bold; letter-spacing: 0.02em;
+  font-family: Audiowide, Lato, sans-serif; color:white; font-size: 1.5em; letter-spacing: 0.1em;
 }
