campanha black friday

--- a/htm/css/style.css
+++ b/htm/css/style.css
@@ -117,7 +117,7 @@
     background-size: cover;
     -o-background-size: cover;
     background-position: center;
-    background-image: url('https://www.rumo.com.br/lojas/00033937/images/smartphone-table-transparent-min.jpg');
+    background-image: url('https://www.rumo.com.br/lojas/00033937/images/tuning_phone-black_friday-v-1-1024x768.png');
     text-align: center;
     padding: 20% 1%;
   }
