--- a/htm/css/style.css
+++ b/htm/css/style.css
@@ -114,12 +114,10 @@
     min-height: auto;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    background-size: contain;
+    background-size: cover;
     -o-background-size: cover;
     background-position: center;
-    background-image: url('https://www.rumo.com.br/lojas/00033937/images/black-friday.png');
     text-align: center;
-    padding: 20% 1%;
   }
 
   .container-fluid {
