--- a/htm/css/style.css
+++ b/htm/css/style.css
@@ -118,6 +118,7 @@
     -o-background-size: cover;
     background-position: center;
     text-align: center;
+    padding: 0px 10px 0px 10px;
   }
 
   .container-fluid {
